# codex-opc-team

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml  requirements-mem0.txt
.agents/plugins/: marketplace.json
.github/workflows/: ci.yml  installed-lifecycle.yml
docs/: architecture.md  capability-evolution.md  evaluation-baseline.md  hierarchical-recall.md  installation-and-distribution.md  installed-lifecycle-acceptance.md  knowledge-governance.md  knowledge-lineage.md  memory-architecture.md  migration-from-local-prototype.md  opc-dashboard.md  origin-and-decisions.md  release-notes-v0.1.0.en.md  release-notes-v0.1.0.md  release-notes-v0.1.1-rc.1.en.md  release-notes-v0.1.1-rc.1.md  release-readiness-v0.2.0.md  roadmap.md  security-and-privacy.md  shadow-evaluation.md  structured-feedback.md  testing-and-acceptance.md  vision-and-scope.md
docs/adr/: 0001-codex-remains-the-harness.md  0002-public-code-private-portable-knowledge.md  0003-filegit-authority-optional-mem0.md  0004-controlled-knowledge-promotion.md  0005-no-silent-global-config-mutation.md  0006-independent-qa-before-manager-handoff.md  (+11 more)
evaluation/: private-pilot-summary.example.json  private-pilot-v0.2.template.json  release-gates-v0.2.template.json
scripts/: doctor.py  evaluation_baseline.py  hierarchical_evaluation.py  install.ps1  install.sh  migrate_legacy.py  plugin_admin.py  plugin_lifecycle_acceptance.py  privacy_scan.py  uninstall.ps1  uninstall.sh  v0_2_release_evidence.py  validate_repo.py
tests/: __init__.py
(+133 files in other folders)
